--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+/bootstrap/compiled.php
+/vendor
+composer.phar
+composer.lock
+.env.*.php
+.env.php
 .DS_Store
-marketing
-signup.html
-index.html
-indexold.html
-
+Thumbs.db
