--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /bootstrap/compiled.php
 /vendor
-/app/local
-/app/staging
-/app/ingenology
+/app/config/local
+/app/config/staging
+/app/config/ingenology
 composer.phar
 composer.lock
 .env.*.php
